# FlowFD

./: .gitignore  CLAUDE.md  README.md  README_KO.md
.github/: FUNDING.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  start.bat
backend/app/: main.py
backend/app/core/: auth.py  billing_deps.py  config.py  credits.py  firestore.py
backend/app/crew/: nodes.py  pipeline.py  schemas.py
backend/app/jobs/: cps_analyzer_job.py  design_generator_job.py  meeting_summary_job.py  prd_updater_job.py
backend/app/models/: billing_model.py  cps_model.py  meeting_model.py  project_model.py  user_model.py
backend/app/prompts/: prompts.py
backend/app/routers/: auth_router.py  billing_router.py  cps_router.py  github_router.py  meeting_router.py  plan_router.py  prd_router.py  project_router.py  settings_router.py  webhook_router.py
backend/app/services/: billing_service.py  cps_service.py  design_service.py  github_markdown.py  github_service.py  group_service.py  meeting_service.py  prd_service.py  project_service.py  user_service.py
docs/: cps_prompt.md  crew.md  design.md  legal.md  naming.md  paddle.md  prd.md  ui.md
frontend/: README.md  package-lock.json  package.json  proxy.ts
frontend/app/: layout.tsx  robots.ts  sitemap.ts
frontend/app/(app)/: layout.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(landing)/: page.tsx
frontend/components/cps/: CpsViewer.tsx  (+1 more)
frontend/i18n/: request.ts
frontend/messages/: en.json  ko.json
frontend/types/: billing.ts  code.ts  cps.ts  github.ts  group.ts  meeting.ts  prd.ts  project.ts
(+64 files in other folders)
